--- a/language/Russian/simplebb.lng
+++ b/language/Russian/simplebb.lng
@@ -3,6 +3,7 @@
 -------------------------------------------
  Translators : mrB4el (http://www.minezone.pro)
                Corsair (http://webexpert.pp.ua)
+               LonerD (https://dreamlair.net)
 -------------------------------------------
 */
 
@@ -12,32 +13,31 @@ $lang = array_merge( $lang, array(
 'sbb_a_0'		=>	"Форум",
 'sbb_a_1'		=>	"Настройки форума",
 'sbb_a_2'		=>	"Форум на поддомене",
-'sbb_a_3'		=>	"Включение этого параметра переведет работу форума на поддомен",
+'sbb_a_3'		=>	"Включение параметра переведёт работу форума на поддомен",
 'sbb_a_6'		=>	"Ограничение размера заголовка",
-'sbb_a_7'		=>	"Укажите максимальное количество символов",
+'sbb_a_7'		=>	"Максимальное количество символов",
 'sbb_a_8'		=>	"Ограничение размера сообщения",
-'sbb_a_9'		=>	"Укажите максимальное количество символов",
+'sbb_a_9'		=>	"Максимальное количество символов",
 'sbb_a_10'		=>	"Поддержка рекламы",
-'sbb_a_11'		=>	"Форум поддерживает рекламные коды, для их использования включите данную настройку.",
+'sbb_a_11'		=>	"Форум поддерживает рекламные коды; для их использования включите данную настройку.",
 'sbb_a_14'		=>	"-- Выберите категорию --",
-'sbb_a_15'		=>	"Категория вашего форума",
-'sbb_a_16'		=>	"Выбранная вами категория сайта будет использована в качестве корневой для форума.",
+'sbb_a_15'		=>	"Категория форума",
+'sbb_a_16'		=>	"Выбранная категория сайта будет использована в качестве корневой для форума.",
 'sbb_a_17'		=>	"Включить предмодерацию новых тем",
-'sbb_a_18'		=>	"Если вам требуется ручная предмодерация всех создаваемых тем, включите данную настройку",
+'sbb_a_18'		=>	"Включение ручной предмодерации всех создаваемых тем",
 'sbb_a_19'		=>	"Файл шаблона для отображения комментариев",
 'sbb_a_21'		=>	"Файл шаблона для добавления комментариев",
-'sbb_a_22'		=>	"Введите имя файла без суффикса <b>.tpl</b>",
+'sbb_a_22'		=>	"Имя файла без суффикса <b>.tpl</b>",
 'sbb_a_23'		=>	"Показать подфорумы",
 'sbb_a_24'		=>	"Отображение на странице категории всех подфорумов данной категории",
-'sbb_a_25'		=>	"Показывает количество тем в подфорумах",
-'sbb_a_26'		=>	"Если включено, будет отображаться также список тем для каждого подфорума.",
+'sbb_a_25'		=>	"Количество тем в подфорумах",
+'sbb_a_26'		=>	"Включить отображение списка тем для каждого подфорума.",
 'sbb_a_27'		=>	"Файл шаблона списка разделов",
 'sbb_a_28'		=>	"Файл шаблона для содержания темы",
 // SimpleBB
 
-
 // SimpleBB
-'sbb_s_0'		=>	"Вы не имеете доступа для просмотра этого раздела.",
+'sbb_s_0'		=>	"Вы не имеете доступа к просмотру этого раздела.",
 'sbb_s_1'		=>	"Тема создана в соответствующем разделе форума.",
 'sbb_s_2'		=>	"Произошла ошибка",
 'sbb_s_3'		=>	"Не создавайте темы в этой категории.",
